--- a/MainApp/MainApp/MainApp.csproj
+++ b/MainApp/MainApp/MainApp.csproj
@@ -61,6 +61,7 @@
         <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
         <PackageReference Include="CSM.SodaDotNet" Version="0.10.1" />
         <PackageReference Include="HtmlAgilityPack" Version="1.11.60" />
+        <PackageReference Include="HtmlAgilityPack.CssSelectors" Version="1.0.2" />
         <PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
         <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
@@ -68,7 +69,6 @@
 
     <ItemGroup>
       <Folder Include="Data\" />
-      <Folder Include="Models\" />
     </ItemGroup>
 
     <ItemGroup>
