--- a/MainApp/MainApp/MainApp.csproj
+++ b/MainApp/MainApp/MainApp.csproj
@@ -62,6 +62,7 @@
         <PackageReference Include="CSM.SodaDotNet" Version="0.10.1" />
         <PackageReference Include="HtmlAgilityPack" Version="1.11.60" />
         <PackageReference Include="HtmlAgilityPack.CssSelectors" Version="1.0.2" />
+        <PackageReference Include="Microcharts.Maui" Version="1.0.0" />
         <PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
         <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
@@ -77,6 +78,12 @@
       <MauiXaml Update="Page\CarPerformance.xaml">
         <Generator>MSBuild:Compile</Generator>
       </MauiXaml>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Reference Include="CommunityToolkit.Maui">
+        <HintPath>C:\Users\Jesse\.nuget\packages\communitytoolkit.maui\7.0.1\lib\net8.0-maccatalyst17.0\CommunityToolkit.Maui.dll</HintPath>
+      </Reference>
     </ItemGroup>
 
 </Project>
